fixes and added new endpoints
